fini question 3,4
