# src/controllers/game.controller.ts
@@ -1,61 +1,50 @@
-import { Body, Controller, Get, Patch, Path, Post, Route, Tags } from "tsoa";
-import { GameDTO } from "../dto/game.dto";
-import { gameService } from "../services/game.service";
-import { notFound } from "../error/NotFoundError";
-import { Game } from "../models/game.model";
+import { Body, Controller, Get, Route, Tags, Path, Post, Patch } from 'tsoa'
+import { GameDTO } from '../dto/game.dto'
+import { gameService } from '../services/game.service'
 import { consoleService } from "../services/console.service";
+import { notFound } from '../error/NotFoundError';
 
-@Route("games")
-@Tags("Games")
+@Route('games')
+@Tags('Games')
 export class GameController extends Controller {
-  @Get("/")
+
+  @Get('/')
   public async getAllGames(): Promise<GameDTO[]> {
-    return gameService.getAllGames();
+    return gameService.getAllGames()
   }
 
-  @Get("{id}")
-  public async getGamesById(@Path() id: number): Promise<GameDTO | null> {
-    const game = await gameService.getGameById(id);
-    if (!game) {
-      notFound(id.toString());
-    }
-    return game;
+  @Get('{id}')
+  public async getGameById(@Path() id: number): Promise<GameDTO | null> {
+    return gameService.getGameById(id)
   }
 
-  @Post("/")
+  @Post('/')
   public async createGame(@Body() requestBody: GameDTO): Promise<GameDTO> {
-    const { title, console } = requestBody;
+    const { title, console } = requestBody
 
-    if (!console || !console.id) {
-      throw new Error("Console ID is required to create a game");
+    if (console?.id === undefined) {
+      notFound("Console id");
     }
+    const getConsole = await consoleService.getConsoleById(console!.id!);
 
-    const existingConsole = await consoleService.getConsoleById(console.id);
-    if (!existingConsole) {
-      throw new Error(`Console with ID ${console.id} does not exist`);
+    if (!getConsole) {
+      notFound("Console");
+    } else {
+      return gameService.createGame(title, console.id)
     }
-
-    return gameService.createGame(title, existingConsole);
-
   }
 
   @Patch("{id}")
   public async updateGame(
-    @Path() id : number,
+    @Path() id: number,
     @Body() requestBody: GameDTO
-  ): Promise<GameDTO | null>{
+  ): Promise<GameDTO | null> {
     const game = await gameService.getGameById(id);
-    const {title, console} = requestBody;
-    if(!game){
-      notFound(id.toString());
-    }
+    if (!game) notFound(id.toString());
 
-    const idConsole = await consoleService.getConsoleById(console?.id!);
+    const { title, console } = requestBody;
+    const console2 = await consoleService.getConsoleById(console?.id!);
 
-    return gameService.updateGame(id,title,idConsole);    
+    return gameService.updateGame(id, title, console2);
   }
-
 }
-
-
-
